Add Coaching Overview section and improve Hero image display
- Add new CoachingOverview component with high-level overview of SSCoach services
- Include catchy tagline 'Transform Your Vision Into Action' and CTA linking to SSCoach
- Integrate CoachingOverview section between Services and Process sections
- Update Hero image to use public folder path for better asset handling
- Enlarge blob size and adjust image positioning to better showcase face

--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ieva Sibilla Strupule | Pitch Authority</title>
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              brand: {
-                dark: '#0f0f0f',
-                charcoal: '#1a1a1a',
-                accent: '#FF385C', // Vibrant Pink/Red Accent
-                beige: '#FDFBF7', // Light Luxury Background
-                surface: '#FFFFFF', // Card Background
-                gray: '#666666',
-                lightgray: '#E5E5E5'
-              }
-            },
-            fontFamily: {
-              serif: ['Playfair Display', 'serif'],
-              sans: ['Inter', 'sans-serif'],
-            },
-            animation: {
-              'blob': 'blob 7s infinite',
-            },
-            keyframes: {
-              blob: {
-                '0%': { transform: 'translate(0px, 0px) scale(1)' },
-                '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
-                '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
-                '100%': { transform: 'translate(0px, 0px) scale(1)' },
-              }
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ieva Sibilla Strupule | Pitch Authority</title>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            brand: {
+              dark: '#0f0f0f',
+              charcoal: '#1a1a1a',
+              accent: '#FF385C', // Vibrant Pink/Red Accent
+              beige: '#FDFBF7', // Light Luxury Background
+              surface: '#FFFFFF', // Card Background
+              gray: '#666666',
+              lightgray: '#E5E5E5'
+            }
+          },
+          fontFamily: {
+            serif: ['Playfair Display', 'serif'],
+            sans: ['Inter', 'sans-serif'],
+          },
+          animation: {
+            'blob': 'blob 7s infinite',
+          },
+          keyframes: {
+            blob: {
+              '0%': { transform: 'translate(0px, 0px) scale(1)' },
+              '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
+              '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
+              '100%': { transform: 'translate(0px, 0px) scale(1)' },
             }
           }
         }
       }
-    </script>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    }
+  </script>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+    rel="stylesheet">
   <script type="importmap">
 {
   "imports": {
@@ -57,7 +60,10 @@
 }
 </script>
 </head>
-  <body class="bg-brand-beige text-brand-dark antialiased selection:bg-brand-accent selection:text-white">
-    <div id="root"></div>
-  </body>
+
+<body class="bg-brand-beige text-brand-dark antialiased selection:bg-brand-accent selection:text-white">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
